CSS Alignment Fixed

--- a/chatBot/style.css
+++ b/chatBot/style.css
@@ -28,7 +28,7 @@
 }
 .chatbot {
   position: fixed;
-  bottom: 100px;
+  bottom: 175px;
   right: 40px;
   width: 420px;
   background-color: #f3f7f8;
